--- a/app/src/main/res/layout/fr_login.xml
+++ b/app/src/main/res/layout/fr_login.xml
@@ -10,6 +10,7 @@
     tools:layout_editor_absoluteY="25dp">
 
     <android.support.design.widget.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
         android:id="@+id/username_text_input_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -19,7 +20,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/etLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,23 +34,29 @@
         android:id="@+id/password_text_input_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username_text_input_layout">
+        app:layout_constraintTop_toBottomOf="@+id/username_text_input_layout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
+        android:layout_margin="4dp"
+        >
 
-        <EditText
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/etPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:ems="10"
             android:hint="@string/password"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            />
 
     </android.support.design.widget.TextInputLayout>
 
     <Button
+        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:id="@+id/buttonLogin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
