--- a/app/src/main/res/layout/fr_user.xml
+++ b/app/src/main/res/layout/fr_user.xml
@@ -18,7 +18,7 @@
         app:srcCompat="@drawable/ic_person" />
 
     <TextView
-        android:id="@+id/tvUsername"
+        android:id="@+id/tvProfileUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
