--- a/app/src/main/res/layout/fr_stream.xml
+++ b/app/src/main/res/layout/fr_stream.xml
@@ -28,7 +28,7 @@
 
     </com.google.android.exoplayer2.ui.SimpleExoPlayerView>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvChat"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
