--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.nlx.ggstreams.settings.AppSettingsActivity">
+    tools:context="com.nlx.ggstreams.ui.settings.AppSettingsActivity">
 
     <include
         layout="@layout/toolbar"
