--- a/app/src/main/res/layout/activity_stream.xml
+++ b/app/src/main/res/layout/activity_stream.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.nlx.ggstreams.stream.StreamActivity">
+    tools:context=".ui.stream.StreamActivity">
 
     <FrameLayout
         android:id="@+id/content_root"
