--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">@color/primary</color>
     <color name="colorPrimaryDark">@color/primary_dark</color>
+    <color name="color_primary_dark_80">#CC303F9F</color>
     <color name="colorAccent">@color/accent</color>
     <color name="silver">#C0C0C0</color>
     <color name="gold">#FFD700</color>
