--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,14 +6,13 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-
-        <!--&lt;!&ndash; New MaterialComponents attributes. &ndash;&gt;-->
-        <!--<item name="colorSecondary">?attr/colorPrimary</item>-->
-        <!--<item name="scrimBackground">@color/mtrl_scrim_color</item>-->
-        <!--<item name="snackbarButtonStyle">?attr/borderlessButtonStyle</item>-->
+        <!-- New MaterialComponents attributes. -->
+<!--        <item name="colorSecondary">?attr/colorPrimary</item>-->
+<!--        <item name="scrimBackground">@color/mtrl_scrim_color</item>-->
+<!--        <item name="snackbarButtonStyle">?attr/borderlessButtonStyle</item>-->
     </style>
 
-    <style name="StreamTheme" parent="AppTheme">
+    <style name="TransparentTheme" parent="AppTheme">
         <item name="android:windowTranslucentStatus">true</item>
     </style>
 
@@ -25,7 +24,7 @@
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Dark" />
 
     <style name="BottomSheetDialog" parent="Theme.Design.BottomSheetDialog">
 
